// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiStepHorizontal is rendered 1`] = `
<div
  aria-disabled="false"
  aria-label="aria-label"
  aria-selected="false"
  class="wuiStepHorizontal testClass1 testClass2 wuiStepHorizontal-isIncomplete"
  data-test-subj="test subject string"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="wuiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="wuiStepNumber wuiStepNumber--incomplete wuiStepHorizontal__number"
  >
    1
  </div>
  <div
    class="wuiStepHorizontal__title"
  />
</div>
`;

exports[`WuiStepHorizontal props isComplete 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="wuiStepHorizontal wuiStepHorizontal-isComplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined is complete"
>
  <div
    class="wuiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="wuiStepNumber wuiStepNumber--complete wuiStepHorizontal__number"
  >
    <div
      aria-label="complete"
      class="wuiStepNumber__icon"
      data-wuiicon-type="check"
    />
  </div>
  <div
    class="wuiStepHorizontal__title"
  />
</div>
`;

exports[`WuiStepHorizontal props isSelected 1`] = `
<div
  aria-disabled="false"
  aria-selected="true"
  class="wuiStepHorizontal wuiStepHorizontal-isSelected"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="wuiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="wuiStepNumber wuiStepHorizontal__number"
  >
    1
  </div>
  <div
    class="wuiStepHorizontal__title"
  />
</div>
`;

exports[`WuiStepHorizontal props status complete is rendered 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="wuiStepHorizontal wuiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="wuiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="wuiStepNumber wuiStepNumber--complete wuiStepHorizontal__number"
  >
    <div
      aria-label="complete"
      class="wuiStepNumber__icon"
      data-wuiicon-type="check"
    />
  </div>
  <div
    class="wuiStepHorizontal__title"
  />
</div>
`;

exports[`WuiStepHorizontal props status danger is rendered 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="wuiStepHorizontal wuiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="wuiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="wuiStepNumber wuiStepNumber--danger wuiStepHorizontal__number"
  >
    <div
      aria-label="has errors"
      class="wuiStepNumber__icon"
      data-wuiicon-type="cross"
    />
  </div>
  <div
    class="wuiStepHorizontal__title"
  />
</div>
`;

exports[`WuiStepHorizontal props status disabled is rendered 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="wuiStepHorizontal wuiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="wuiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="wuiStepNumber wuiStepNumber--disabled wuiStepHorizontal__number"
  >
    1
  </div>
  <div
    class="wuiStepHorizontal__title"
  />
</div>
`;

exports[`WuiStepHorizontal props status incomplete is rendered 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="wuiStepHorizontal wuiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="wuiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="wuiStepNumber wuiStepNumber--incomplete wuiStepHorizontal__number"
  >
    1
  </div>
  <div
    class="wuiStepHorizontal__title"
  />
</div>
`;

exports[`WuiStepHorizontal props status warning is rendered 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="wuiStepHorizontal wuiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="wuiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="wuiStepNumber wuiStepNumber--warning wuiStepHorizontal__number"
  >
    <div
      aria-label="has warnings"
      class="wuiStepNumber__icon"
      data-wuiicon-type="alert"
    />
  </div>
  <div
    class="wuiStepHorizontal__title"
  />
</div>
`;

exports[`WuiStepHorizontal props step 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="wuiStepHorizontal wuiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 5: undefined"
>
  <div
    class="wuiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="wuiStepNumber wuiStepNumber--incomplete wuiStepHorizontal__number"
  >
    5
  </div>
  <div
    class="wuiStepHorizontal__title"
  />
</div>
`;

exports[`WuiStepHorizontal props title 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="wuiStepHorizontal wuiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: First step"
>
  <div
    class="wuiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="wuiStepNumber wuiStepNumber--incomplete wuiStepHorizontal__number"
  >
    1
  </div>
  <div
    class="wuiStepHorizontal__title"
  >
    First step
  </div>
</div>
`;
